envoy-ratelimit/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ratelimit
  labels:
    istio-injection: enabled
