envoy-ratelimit/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratelimit
  namespace: ratelimit
  labels:
    app: ratelimit
    version: v1
spec:
  ports:
    - name: http-ratelimit
      port: 8080
      targetPort: 8080
    - name: http-debug
      port: 6070
      targetPort: 6070
    - name: grpc-ratelimit
      port: 8081
      targetPort: 8081
    - name: http-prometheus-metrics
      port: 9102
      targetPort: 9102
    - name: http-statsd-exporter
      port: 9125
      targetPort: 9125
  selector:
    app: ratelimit
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratelimit
  namespace: ratelimit
  labels:
    app: ratelimit
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ratelimit
  template:
    metadata:
      labels:
        app: ratelimit
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "9102"
        prometheus.istio.io/merge-metrics: "false"
    spec:
      containers:
        - name: ratelimit
          image: docker.io/envoyproxy/ratelimit:6aaad7c3
          imagePullPolicy: Always
          command: ["/bin/ratelimit"]
          ports:
            - containerPort: 8080
            - containerPort: 8081
            - containerPort: 6070
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: ratelimit-config
              mountPath: /data/runtime/config
        - name: statsd-exporter
          image: docker.io/prom/statsd-exporter:v0.21.0
          imagePullPolicy: Always
          args: ["--statsd.mapping-config=/etc/statsd-exporter/config.yaml"]
          ports:
            - containerPort: 9125
            - containerPort: 9102
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: statsd-exporter-config
              mountPath: /etc/statsd-exporter
      volumes:
        - name: ratelimit-config
          configMap:
            name: ratelimit-config
        - name: statsd-exporter-config
          configMap:
            name: statsd-exporter-config
